[package]
name = "jfna"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
quote = "1.0"
janetrs = { git = "ssh://git@github.com/GrayJack/janetrs.git", version = "0.5.0", features = [] }

[lib]
proc-macro = true

[dev-dependencies]
janetrs = { git = "ssh://git@github.com/GrayJack/janetrs.git", version = "0.5.0", features = [ "link-system" ] }
